[tool.poetry]
name = "co_api"
version = "0.1.0"
description = ""
authors = ["gweidart <btnewcomer@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
cohere = "^5.11.1"
langchain = "^0.3.4"
langchain-cohere = "^0.3.1"
langchain-experimental = "^0.3.2"
rich = "^13.9.2"
langchain-community = "^0.3.3"
solc = "^0.0.0a0"
slither-analyzer = "^0.10.4"
solc-select = "^1.0.4"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
